--- a/src/app/student-dashboard/students-dashboard/students-dashboard.component.html
+++ b/src/app/student-dashboard/students-dashboard/students-dashboard.component.html
@@ -3,10 +3,8 @@
         <ul>
             <li [routerLink]="['/student-dashboard/enroll']">Enroll</li>
             <li [routerLink]="['/student-dashboard/enrolled-courses']">My Courses</li>
-            <!-- <li [routerLink]="['/tutor-dashboard/create-quiz']">Create Quiz</li>
-            <li [routerLink]="['/tutor-dashboard/create-result']">Create Results</li>
-            <li [routerLink]="['/tutor-dashboard/remove-course']">Remove Course</li>
-            <li [routerLink]="['/user/profile']">User Profile</li>    -->
+            <li [routerLink]="['/student-dashboard/get-result']">Result History</li>
+            <li [routerLink]="['/student-dashboard/get-payment']">Payment History</li> 
           </ul> 
     </div>
     <div class="right-section">
