--- a/src/app/tutor-dashboard/create-course/create-course.component.html
+++ b/src/app/tutor-dashboard/create-course/create-course.component.html
@@ -5,6 +5,10 @@
     <input id="courseName" formControlName="courseName" type="text" />
   </div>
   <div>
+    <label for="imgurl">Image URL:</label>
+    <input id="imgurl" formControlName="imgurl" type="text" />
+  </div>
+  <div>
     <label for="description">Description:</label>
     <input id="description" formControlName="description" type="text" />
   </div>
