--- a/src/app/tutor-dashboard/tutors-dashboard/tutors-dashboard.component.html
+++ b/src/app/tutor-dashboard/tutors-dashboard/tutors-dashboard.component.html
@@ -1,11 +1,9 @@
 <div class="container">
     <div class="left-section">
         <ul>
+            <li [routerLink]="['/tutor-dashboard/get-my-created-courses']">My Courses</li>
             <li [routerLink]="['/tutor-dashboard/create-course']">Create Course</li>
-            <li [routerLink]="['/tutor-dashboard/course-content']">Add Course Content</li>
-            <li [routerLink]="['/tutor-dashboard/create-quiz']">Create Quiz</li>
             <li [routerLink]="['/tutor-dashboard/create-result']">Create Results</li>
-            <li [routerLink]="['/tutor-dashboard/remove-course']">Remove Course</li>
             <li [routerLink]="['/user/profile']">User Profile</li>  
           </ul> 
     </div>
