--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,7 +11,7 @@
         <a href="/student-dashboard/students-dashboard" class="nav-link">Student Dashboard</a>
         <!-- <a href="#" class="nav-link">Contact</a> -->
         <span *ngIf="user" class="nav-link">
-          <i class="fas fa-user"></i> Welcome, {{ user.username }}
+          <i class="fas fa-user"></i> Hey, {{ user.username }}
           <button (click)="logout()" class="logout-button">Logout</button>
         </span>
       </nav>
