--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,5 +1,6 @@
 <div class="user-profile-container" *ngIf="userProfile">
     <h2>User Profile</h2>
+    <p><strong>UserId:</strong> {{ userProfile.userId }}</p>
     <p><strong>Username:</strong> {{ userProfile.username }}</p>
     <p><strong>Email:</strong> {{ userProfile.email }}</p>
     <p><strong>User Type:</strong> {{ userProfile.userType }}</p>
