4 April 2025 after new quiz

--- a/src/app/quiz/new-quiz/new-quiz.component.html
+++ b/src/app/quiz/new-quiz/new-quiz.component.html
@@ -24,7 +24,8 @@
       <label for="correctOptionId">Correct Option ID:</label>
       <input id="correctOptionId" formControlName="correctOptionId" type="number" />
       <div formArrayName="options">
-        <div *ngFor="let option of question.get('options').controls; let j = index" [formGroupName]="j">
+        <!-- below statement is replaced--> 
+        <div *ngFor="let option of optionsControls; let j = index" [formGroupName]="j">
           <label for="optionText">Option {{ j + 1 }}:</label>
           <input id="optionText" formControlName="optionText" type="text" />
         </div>
@@ -35,3 +36,6 @@
   </div>
   <button type="submit" [disabled]="quizForm.invalid">Create Quiz</button>
 </form>
+
+
+<!-- <div *ngFor="let option of question.get('options')!.controls; let j = index" [formGroupName]="j"></div> -->
