--- a/src/app/tutor-dashboard/tutors-dashboard/tutors-dashboard.component.html
+++ b/src/app/tutor-dashboard/tutors-dashboard/tutors-dashboard.component.html
@@ -4,6 +4,7 @@
             <li [routerLink]="['/tutor-dashboard/get-my-created-courses']">My Courses</li>
             <li [routerLink]="['/tutor-dashboard/create-course']">Create Course</li>
             <li [routerLink]="['/tutor-dashboard/create-result']">Create Results</li>
+            <li [routerLink]="['/quiz/new-quiz']">Create Quiz</li>
             <li [routerLink]="['/user/profile']">User Profile</li>  
           </ul> 
     </div>
