4 April 2025 after new quiz final

--- a/src/app/quiz/new-quiz/new-quiz.component.html
+++ b/src/app/quiz/new-quiz/new-quiz.component.html
@@ -16,6 +16,52 @@
     <label for="courseId">Course ID:</label>
     <input id="courseId" formControlName="courseId" type="number" />
   </div>
+
+  <div formArrayName="questions">
+    <div *ngFor="let question of questions.controls; let i = index" [formGroupName]="i">
+      <h4>Question {{ i + 1 }}</h4>
+      <label for="questionText-{{ i }}">Question Text:</label>
+      <input id="questionText-{{ i }}" formControlName="questionText" type="text" />
+
+      <label for="correctOptionId-{{ i }}">Correct Option ID:</label>
+      <input id="correctOptionId-{{ i }}" formControlName="correctOptionId" type="number" />
+
+      <div formArrayName="options">
+        <div *ngFor="let option of options(i).controls; let j = index" [formGroupName]="j">
+          <label for="optionText-{{ i }}-{{ j }}">Option {{ j + 1 }}:</label>
+          <input id="optionText-{{ i }}-{{ j }}" formControlName="optionText" type="text" />
+        </div>
+        <button type="button" (click)="addOption(i)">Add Option</button>
+      </div>
+    </div>
+  </div>
+
+  <button type="button" (click)="addQuestion()">Add Question</button>
+  <br />
+  <button type="submit" [disabled]="quizForm.invalid">Create Quiz</button>
+</form>
+
+
+
+
+<!-- <h3>Create Quiz</h3>
+<form [formGroup]="quizForm" (ngSubmit)="createQuiz()">
+  <div>
+    <label for="quizName">Quiz Name:</label>
+    <input id="quizName" formControlName="quizName" type="text" />
+  </div>
+  <div>
+    <label for="description">Description:</label>
+    <input id="description" formControlName="description" type="text" />
+  </div>
+  <div>
+    <label for="totalmarks">Total Marks:</label>
+    <input id="totalmarks" formControlName="totalmarks" type="number" />
+  </div>
+  <div>
+    <label for="courseId">Course ID:</label>
+    <input id="courseId" formControlName="courseId" type="number" />
+  </div>
   <div formArrayName="questions">
     <div *ngFor="let question of questions.controls; let i = index" [formGroupName]="i">
       <h4>Question {{ i + 1 }}</h4>
@@ -24,8 +70,8 @@
       <label for="correctOptionId">Correct Option ID:</label>
       <input id="correctOptionId" formControlName="correctOptionId" type="number" />
       <div formArrayName="options">
-        <!-- below statement is replaced--> 
-        <div *ngFor="let option of optionsControls; let j = index" [formGroupName]="j">
+        below statement is replaced--> 
+        <!-- <div *ngFor="let option of optionsControls; let j = index" [formGroupName]="j">
           <label for="optionText">Option {{ j + 1 }}:</label>
           <input id="optionText" formControlName="optionText" type="text" />
         </div>
@@ -35,7 +81,7 @@
     <button type="button" (click)="addQuestion()">Add Question</button>
   </div>
   <button type="submit" [disabled]="quizForm.invalid">Create Quiz</button>
-</form>
+</form> -->
 
 
 <!-- <div *ngFor="let option of question.get('options')!.controls; let j = index" [formGroupName]="j"></div> -->
