--- a/src/app/tutor-dashboard/tutors-dashboard/tutors-dashboard.component.html
+++ b/src/app/tutor-dashboard/tutors-dashboard/tutors-dashboard.component.html
@@ -6,6 +6,7 @@
             <li [routerLink]="['/tutor-dashboard/create-result']">Create Results</li>
             <li [routerLink]="['/quiz/new-quiz']">Create Quiz</li>
             <li [routerLink]="['/user/profile']">User Profile</li>  
+            <li [routerLink]="['/quiz/get-quiz-by-course-id']">Get Quiz by courseId</li>  
           </ul> 
     </div>
     <div class="right-section">
