--- a/src/app/dashboards/ad-view-all-users/ad-view-all-users.component.html
+++ b/src/app/dashboards/ad-view-all-users/ad-view-all-users.component.html
@@ -2,5 +2,6 @@
 <ul>
   <li *ngFor="let user of users">
     {{ user.username }} - {{ user.email }} - {{ user.userType }}
+    <button (click)="deleteUser(user.username)">Delete</button>
   </li>
 </ul>
