--- a/src/app/student-dashboard/students-dashboard/students-dashboard.component.html
+++ b/src/app/student-dashboard/students-dashboard/students-dashboard.component.html
@@ -5,6 +5,7 @@
             <li [routerLink]="['/student-dashboard/enrolled-courses']">My Courses</li>
             <li [routerLink]="['/student-dashboard/get-result']">Result History</li>
             <li [routerLink]="['/student-dashboard/get-payment']">Payment History</li> 
+            <li [routerLink]="['/user/profile']">User Profile</li> 
           </ul> 
     </div>
     <div class="right-section">
