--- a/src/app/tutor-dashboard/get-my-created-courses/get-my-created-courses.component.html
+++ b/src/app/tutor-dashboard/get-my-created-courses/get-my-created-courses.component.html
@@ -8,7 +8,7 @@
     <p>Price: {{ course.price }}</p>
     <button (click)="navigateToCourseContents(course.courseId)">View Course Content</button>
     <button (click)="navigateToAddCourseContent(course.courseId)">Add Course Content</button>
-    <button (click)="navigateToCreateQuiz(course.courseId)">Create Quiz</button>
+    <button (click)="navigateToCreateNewQuiz(course.courseId)">Create Quiz</button>
     <button (click)="removeCourse(course.courseId)">Remove Course</button>
   </li>
 </ul>
