--- a/src/app/dashboards/add-remove-user/add-remove-user.component.html
+++ b/src/app/dashboards/add-remove-user/add-remove-user.component.html
@@ -1,4 +1,3 @@
 <h3>Delete User</h3>
-<input type="number" [(ngModel)]="userId" placeholder="Enter User ID" />
+<input type="text" [(ngModel)]="username" placeholder="Enter Username" />
 <button (click)="deleteUser()">Delete User</button>
-
