--- a/src/app/dashboards/ad-payment-list/ad-payment-list.component.html
+++ b/src/app/dashboards/ad-payment-list/ad-payment-list.component.html
@@ -1,6 +1,6 @@
-<h3>Payment List</h3>
-<ul>
-  <li *ngFor="let payment of payments">
-    {{ payment.paymentId }} - {{ payment.amount }} - {{ payment.paymentDate }} - {{ payment.paymentMethod }} - {{ payment.userId }}
-  </li>
-</ul>
+<app-generic-list
+  [title]="'Payment List'"
+  [data]="payments"
+  [fields]="['paymentId', 'amount', 'paymentDate', 'paymentMethod', 'userId']"
+  [headers]="['Payment ID', 'Amount', 'Payment Date', 'Payment Method', 'User ID']"
+></app-generic-list>
