--- a/src/app/quiz/get-quiz-by-course-id/get-quiz-by-course-id.component.html
+++ b/src/app/quiz/get-quiz-by-course-id/get-quiz-by-course-id.component.html
@@ -1,8 +1,8 @@
 <div class="container p-4">
     <h2 class="text-xl font-bold mb-4">Take Quiz</h2>
-  
+    <p>Are you sure you want to start the quiz?</p>
     <button (click)="fetchQuiz()" class="bg-blue-600 text-white px-4 py-2 rounded">
-      Proceed
+      Start Quiz
     </button>
   
     <div *ngIf="quiz">
