--- a/src/app/student-dashboard/students-dashboard/students-dashboard.component.html
+++ b/src/app/student-dashboard/students-dashboard/students-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="left-section">
         <ul>
-            <li [routerLink]="['/student-dashboard/enroll']">Enroll</li>
+            <li [routerLink]="['/student-dashboard/enroll']">Explore Courses</li>
             <li [routerLink]="['/student-dashboard/enrolled-courses']">My Courses</li>
             <li [routerLink]="['/student-dashboard/get-result']">Result History</li>
             <li [routerLink]="['/student-dashboard/get-payment']">Payment History</li> 
