--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,19 +1,18 @@
 <header class="header">
-    <div class="container">
-      <div class="branding">
-        <h1 class="logo">Edurise</h1>
-        <p class="tagline">Rise Above, Learn Beyond</p>
-      </div>
-      <nav class="nav">
-        <a href="/user/login" class="nav-link">Login</a>
-        <a href="/dashboards/admin-dashboard" class="nav-link">Admin Dashboard</a>
-        <a href="/tutor-dashboard/tutors-dashboard" class="nav-link">Tutor Dashboard</a>
-        <a href="/student-dashboard/students-dashboard" class="nav-link">Student Dashboard</a>
-        <!-- <a href="#" class="nav-link">Contact</a> -->
-        <span *ngIf="user" class="nav-link">
-          <i class="fas fa-user"></i> Hey, {{ user.username }}
-          <button (click)="logout()" class="logout-button">Logout</button>
-        </span>
-      </nav>
+  <div class="container">
+    <div class="branding">
+      <h1 class="logo">Edurise</h1>
+      <p class="tagline">Rise Above, Learn Beyond</p>
     </div>
+    <nav class="nav">
+      <a href="/user/login" class="nav-link" *ngIf="!user">Login</a>
+      <a href="/dashboards/admin-dashboard" class="nav-link" *ngIf="user?.userType === 'admin'">Admin Dashboard</a>
+      <a href="/tutor-dashboard/tutors-dashboard" class="nav-link" *ngIf="user?.userType === 'tutor'">Tutor Dashboard</a>
+      <a href="/student-dashboard/students-dashboard" class="nav-link" *ngIf="user?.userType === 'student'">Student Dashboard</a>
+      <span *ngIf="user" class="nav-link">
+        <i class="fas fa-user"></i> Hey, {{ user.username }}
+        <button (click)="logout()" class="logout-button">Logout</button>
+      </span>
+    </nav>
+  </div>
 </header>
