--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,35 +1,42 @@
-<h3>Register</h3>
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div>
     <label for="username">Username:</label>
     <input id="username" formControlName="username" type="text" />
+    <div *ngIf="registerForm.get('username')?.touched && registerForm.get('username')?.invalid" class="error">
+      <small *ngIf="registerForm.get('username')?.errors?.['required']">Username is required.</small>
+      <small *ngIf="registerForm.get('username')?.errors?.['minlength']">Username must be at least 3 characters long.</small>
+    </div>
   </div>
 
   <div>
     <label for="email">Email:</label>
     <input id="email" formControlName="email" type="email" />
+    <div *ngIf="registerForm.get('email')?.touched && registerForm.get('email')?.invalid" class="error">
+      <small *ngIf="registerForm.get('email')?.errors?.['required']">Email is required.</small>
+      <small *ngIf="registerForm.get('email')?.errors?.['email']">Enter a valid email address.</small>
+    </div>
   </div>
 
   <div>
     <label for="password">Password:</label>
     <input id="password" formControlName="password" type="password" />
+    <div *ngIf="registerForm.get('password')?.touched && registerForm.get('password')?.invalid" class="error">
+      <small *ngIf="registerForm.get('password')?.errors?.['required']">Password is required.</small>
+      <small *ngIf="registerForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long.</small>
+    </div>
   </div>
-
-  <!-- <div>
-    <label for="userType">User Type:</label>
-    <select id="userType" formControlName="userType">
-      <option value="student">Student</option>
-    </select>
-  </div> -->
 
   <div>
     <label for="userType">User Type:</label>
     <select id="userType" formControlName="userType">
-      <option value="" disabled selected>Select User Type</option>
+      <option value="" disabled>Select User Type</option>
       <option value="student">Student</option>
+      <option value="admin">Admin</option>
     </select>
+    <div *ngIf="registerForm.get('userType')?.touched && registerForm.get('userType')?.invalid" class="error">
+      <small *ngIf="registerForm.get('userType')?.errors?.['required']">User Type is required.</small>
+    </div>
   </div>
-
 
   <button type="submit" [disabled]="registerForm.invalid">Register</button>
 </form>
