--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<app-floating-discussion-button></app-floating-discussion-button>
 <!-- <app-footer></app-footer> -->
